--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="카메라 오픈" />
-
+        <Button
+            android:id="@+id/outlookLink"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Outlook 열기" />
         <Button
             android:id="@+id/kakaomapLink"
             android:layout_width="wrap_content"
